# core-to-core-latency

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-MIT  README.md
results/: AMD EPYC 7773X.csv  AMD EPYC 7R13 48-Core Processor.csv  AMD Ryzen 7 2700X Eight-Core Processor.csv  AMD Ryzen 7 5700X.csv  AMD Ryzen 7 5800U.csv  AMD Ryzen 9 5900HX @ 3.3 GHz.csv  AMD Ryzen 9 5900X.csv  AMD Ryzen 9 5950X @ 3.40 GHz.csv  AMD Ryzen 9 7950X.csv  AMD Ryzen Threadripper 1950X.csv  AMD Ryzen Threadripper 3960X, 3.80GHz, 24 Cores, Zen 2, 3rd Gen, 2019-Q4.csv  AWS Graviton2.csv  AWS Graviton3.csv  Apple M1 Pro.csv  Dual AMD EPYC 7742 64-Core Processor.csv  Dual IBM Power7 8 cores@3.3 GHz 2010-Q1.csv  Dual Intel(R) Xeon Gold 6242 @ 2.8GHz.csv  Dual Intel(R) Xeon(R) CPU E5-2630 v4 @ 2.20GHz.csv  Dual Intel(R) Xeon(R) CPU E5-2680 v4 @ 2.40GHz.csv  Dual Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz.csv  Dual Intel(R) Xeon(R) CPU X5650  @ 2.67GHz.csv  Dual Sun-Oracle SPARC T4 8 cores@2.85 GHz.csv  HiSilicon Kunpeng 920-6426 @ 2.6GHz.csv  IBM PPC970 2.2 @ 1.8GHz x2.csv  Intel Core i5-10310U.csv  Intel Core i7-6700K.csv  Intel Core i9-12900K.csv  Intel Core i9-9900K CPU @ 3.60 GHz.csv  Intel(R) Atom(TM) CPU D510 @ 1.66GHz.csv  Intel(R) Core(TM) i5-4590 CPU @ 3.30GHz.csv  Intel(R) Core(TM) i7-1165G7 @ 2.80GHz.csv  Intel(R) Xeon Gold 6242 @ 2.8GHz.csv  Intel(R) Xeon Phi(TM) CPU 7210 @ 1.30GHz.csv  Intel(R) Xeon(R) CPU E5-2695 v4 @ 2.10GHz.csv  Intel(R) Xeon(R) Platinum 8275CL CPU @ 3.00GHz.csv  Intel(R) Xeon(R) Platinum 8375C CPU @ 2.90GHz.csv  Loongson 3A5000HV, 2.5GHz, 4 Cores, 2021-Q3.csv  m1.ultra.16p+4e.csv  (+1 more)
(+7 files in other folders)
