[package]
name = "core-to-core-latency"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "*"
minstant = { version = "*", optional = true }
clap = { version = "3", features = ["derive"] }

[features]
default = ["rdtsc"]
rdtsc = ["minstant"]
