[package]
name = "core-to-core-latency"
description = "Measures CPU core-to-core latency"
authors = ["Nicolas Viennot <nicolas@viennot.com>"]
repository = "https://github.com/nviennot/core-to-core-latency"
license = "MIT"
readme = "README.md"
version = "1.0.0"
edition = "2021"
exclude = ["/results"]

[dependencies]
core_affinity = "0.5"
minstant = { version = "0.1", optional = true }
clap = { version = "3", features = ["derive"] }
ndarray = "0.15"
ansi_term = "0.12"
ordered-float = "3"

[features]
default = ["rdtsc"]
rdtsc = ["minstant"]
